# epaper-weather-station

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.esp32s3  sdkconfig.old
assets/sdkconfig-defaults/: epdiy-demo-config
components/OpenFontRender/: CMakeLists.txt
components/adc_compat/: CMakeLists.txt  adc_compat.c  adc_compat4.c
components/adc_compat/include/: adc_compat.h  adc_compat4.h
components/big-fonts/: CMakeLists.txt  DejaVuSans_Bold60pt7b.h  Ubuntu_B40pt7b.h  Ubuntu_B80pt7b.h  Ubuntu_B80pt8b.h  Ubuntu_B90pt7b.h  Ubuntu_L80pt8b.h  e_firasans_24.h  e_ubuntu_b_120.h  e_ubuntu_b_180.h  e_ubuntu_b_40.h  e_ubuntu_b_60.h  e_ubuntu_b_80.h  e_ubuntu_l_80.h  fatsansround44pt7b.h  font-generation-readme.txt
components/big-fonts/chinese/: LICENSE  binaryttf.h  weekdays-month-NOTO.sfd
components/big-fonts/logo/: fatsansround48pt7b.h  img_pcb_solder.h  logo-clb.h  logo_fasani.h  logo_skygate.h  serra.h
components/epaper-parallel/: CMakeLists.txt  Kconfig
components/epaper-spi/: CMakeLists.txt  Kconfig
components/i2c/: CMakeLists.txt  i2cdev.c
components/i2c/include/: i2cdev.h  scd4x.h
components/i2c/sdc40/: scd4x.c
components/rtc/: CMakeLists.txt  i2cdev.c
components/rtc/pcf8563/: CMakeLists.txt  README.md
components/rtc/pcf8563/main/: CMakeLists.txt  Kconfig.projbuild  i2cdev.c  i2cdev.h  main.c  pcf8563.c  pcf8563.h
components/ws2812_led/: CMakeLists.txt  Kconfig  ws2812_led.c
components/ws2812_led/include/: ws2812_led.h
main/: CMakeLists.txt  Kconfig.projbuild  weather-station.cpp
main/BLE/: gatt_server_receive.cpp  gatts_demo.cpp
main/SPI-displays/: air-quality-station.cpp  jpeg-render.cpp  particle-draw.cpp  tinypico-rtc-pcf8563-clock.cpp  weather-station-pcf8563.cpp  weather-station-scd4x.cpp  weather-station-wifi-img.cpp  weather-station.cpp
main/SPI-displays/smart-watch/: pcf8563-touch-watch.cpp
main/SPI-displays/ssl_cert/: server_cert.pem
main/epdiy/: CO2-station.cpp  activities.h  grayscale.c  gym-events-station.cpp  weather-station.cpp
main/it8951/: weather-station-unicode.cpp  weather-station.cpp
main/it8951/rtc-activity/: activities.h  co2-gym-panel.cpp
main/it8951/translations/: catala.h  chinese-mandarin.h  deutsch.h  english.h  spanish.h
main/tests/: deepsleep-consumption.cpp  ds3231-demo.c  it8951-i2c-scan.cpp  sdc40.c  seeed-hm3301.cpp  tps2113-powered-by.cpp
main/tests/Lilygo/: rtc-clock.c
main/tests/epdiy_v7/: rtc-clock.c
main/tests/rtc/: ds3231-alarm.c  ds3231-demo.c  i2c-scan.cpp  it8951-i2c-scan.cpp
main/tests/tft-ILI9341/: tft-collision-circles.cpp
main/tft-parallel-8/: tft-test.cpp
sdk-config-examples/: Cinwrite-SPI-GoodDisplay  Cinwrite-SPI-GoodDisplay-v2  Cinwrite-SPI-PCB-solder  Cinwrite-Switch-demo-GD  carlos-RTC-7.5  default-S3-Cinwrite  epdiy-v5  invisible-computers-800x480  lilygo-s3  particles-esp32-hm3301  sdk-S3-noPSRAM-80Mhz-low-consumption  sdk-epdiy-esp32-config  tinypico-goodisplay-spi-rtc
sdk-config-examples/watch/: C3-1.54-proto  heltec-DS3231-200x200
