set(srcs 
    "upstream/src/base/basepic.c"
    "upstream/src/base/ftadvanc.c"
    "upstream/src/base/ftapi.c"
    "upstream/src/base/ftbase.c"
    "upstream/src/base/ftbbox.c"
    "upstream/src/base/ftbdf.c"
    "upstream/src/base/ftbitmap.c"
    "upstream/src/base/ftcalc.c"
    "upstream/src/base/ftcid.c"
    "upstream/src/base/ftdbgmem.c"
    "upstream/src/base/ftdebug.c"
    "upstream/src/base/ftfstype.c"
    "upstream/src/base/ftgasp.c"
    "upstream/src/base/ftgloadr.c"
    "upstream/src/base/ftglyph.c"
    "upstream/src/base/ftgxval.c"
    "upstream/src/base/ftinit.c"
    "upstream/src/base/ftlcdfil.c"
    "upstream/src/base/ftmm.c"
    "upstream/src/base/ftobjs.c"
    "upstream/src/base/ftotval.c"
    "upstream/src/base/ftoutln.c"
    "upstream/src/base/ftpatent.c"
    "upstream/src/base/ftpfr.c"
    "upstream/src/base/ftpic.c"
    "upstream/src/base/ftrfork.c"
    "upstream/src/base/ftsnames.c"
    "upstream/src/base/ftstream.c"
    "upstream/src/base/ftstroke.c"
    "upstream/src/base/ftsynth.c"
    "upstream/src/base/ftsystem.cpp"
    "upstream/src/base/fttrigon.c"
    "upstream/src/base/fttype1.c"
    "upstream/src/base/ftutil.c"
    "upstream/src/base/ftwinfnt.c"
    "upstream/src/base/ftxf86.c"
    "upstream/src/base/md5.c"

    "upstream/src/cache/ftcache.c"
    "upstream/src/cache/ftcbasic.c"
    "upstream/src/cache/ftccache.c"
    "upstream/src/cache/ftccmap.c"
    "upstream/src/cache/ftcglyph.c"
    "upstream/src/cache/ftcimage.c"
    "upstream/src/cache/ftcmanag.c"
    "upstream/src/cache/ftcmru.c"
    "upstream/src/cache/ftcsbits.c"

    "upstream/src/sfnt/sfdriver.c"
    "upstream/src/sfnt/sfnt.c"
    "upstream/src/sfnt/sfntpic.c"
    "upstream/src/sfnt/sfobjs.c"
    "upstream/src/sfnt/ttbdf.c"
    "upstream/src/sfnt/ttcmap.c"
    "upstream/src/sfnt/ttkern.c"
    "upstream/src/sfnt/ttload.c"
    "upstream/src/sfnt/ttmtx.c"
    "upstream/src/sfnt/ttpost.c"
    "upstream/src/sfnt/ttsbit.c"
    "upstream/src/sfnt/ttsbit0.c"

    "upstream/src/smooth/ftgrays.c"
    "upstream/src/smooth/ftsmooth.c"
    "upstream/src/smooth/ftspic.c"
    "upstream/src/smooth/smooth.c"

    "upstream/src/truetype/truetype.c"
    "upstream/src/truetype/ttdriver.c"
    "upstream/src/truetype/ttgload.c"
    "upstream/src/truetype/ttinterp.c"
    "upstream/src/truetype/ttobjs.c"
    "upstream/src/truetype/ttpic.c"
    "upstream/src/truetype/ttpload.c"
    "upstream/src/truetype/ttsubpix.c"

    "upstream/src/FileSupport.cpp"
    "upstream/src/OpenFontRender.cpp"
)
idf_component_register(SRCS ${srcs}
                    INCLUDE_DIRS 
                    "upstream/src/"
                    "upstream/src/base"
                    "upstream/src/cache"
                    "upstream/src/sfnt"
                    "upstream/src/smooth"
                    "upstream/src/freetype"
)
